force-app/main/default/objects/Case_Order_Product__c/Case_Order_Product__c.object-meta.xml
<CustomObject>
    <label>Case Order Product</label>
    <nameField>
        <label>Case Order Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>