force-app/main/default/objects/Case_Order_Product__c/fields/External_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Id__c</fullName>
    <label>External Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>