force-app/main/default/objects/Case_Order_Product__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Case Order Products</relationshipLabel>
    <relationshipName>Case_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>