force-app/main/default/objects/Case_Order_Product__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved Full Refund</fullName>
            </value>
            <value>
                <fullName>Approved Partial Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>