force-app/main/default/objects/Case_Order_Product__c/fields/Requested_Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Requested_Refund_Type__c</fullName>
    <label>Requested Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>